--- a/src/main/webapp/resources/locales/pt/translation.json
+++ b/src/main/webapp/resources/locales/pt/translation.json
@@ -51,13 +51,13 @@
 		"tip": {
 			"cancel" : "Clique para cancelar o cadastro",
 			"delete" : "Clique para excluir esta localiza\u00E7\u00E3o",
-			"edit" : "CClique para editar esta localiza\u00E7\u00E3o",
+			"edit" : "Clique para editar esta localiza\u00E7\u00E3o",
 			"hide" : "Clique para fechar a lista",
 			"home" : "Clique para voltar para o in\u00EDcio",
 			"list" : "Clique para listar todas as localiza\u00E7\u00F5es cadastradas",
 			"new" : "Clique para cadastrar essa localiza\u00E7\u00E3o",
 			"refresh" : "Clique para cadastrar uma nova localiza\u00E7\u00E3o",
-			"register" : "Click to register a new location",
+			"register" : "Clique para cadastrar uma nova localiza\u00E7\u00E3o",
 			"search" : "Clique para buscar uma localiza\u00E7\u00E3o"
 		}
 	},
